tests/errors/invalid_cast.pyx
# mode: error

def f():
    a = <foao>True

_ERRORS = u"""
4:9: 'foao' is not a type identifier
"""
